--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
 
 {% block conteudo %}
-    <p>Seja Bem-Vindo ao Login do Sistema</p>
+  <p>Seja Bem-Vindo ao Login do Sistema!</p>
 {% endblock %}
