--- a/templates/alterar_senha.html
+++ b/templates/alterar_senha.html
@@ -44,11 +44,11 @@
     </header>
 
     <main>
-      <form action="/cadastro" method="post">
+      <form action="/alterar_senha" method="post">
         <div class="logo">
           <img
             src="/static/imagens/PegaMalandroLogo.jpg"
-            alt="imagem do usuario"
+            alt="logo"
             id="image"
           />
 
@@ -66,13 +66,13 @@
             required
             type="password"
             placeholder="Nova senha:"
-            id="Nova_senha"
+            id="senha_nova"
           />
           <input
             required
             type="password"
             placeholder="Confirmar nova senha:"
-            id="Nova_senha_confirm"
+            id="confirmacao_senha_nova"
           />
         </div>
 
