--- a/templates/login.html
+++ b/templates/login.html
@@ -62,15 +62,7 @@
         
         <p class='msg'>{{ msg }}</p>
       </form>
-    </main>
-
-    <footer class="footer">
-      <ul>
-        <a href=""><li>Privacy</li></a>
-        <a href=""><li>Terms</li></a>
-        <a href=""><li>Contact</li></a>
-      </ul>
-      <span>Copyright 2024</span>
-    </footer>
+      <p class='msg'>{{ msg }}</p>
+    </div>
   </body>
 </html>
