Pagina de ponto

--- a/templates/menu_policial.html
+++ b/templates/menu_policial.html
@@ -23,7 +23,7 @@
             <li>Consultar Ocorrências</li>
             <li>Alterar uma ocorrência</li>
             <li>SMP (Sistema de Mensagens dos Peppa)</li>
-            <li>Turnos</li>
+            <li>Folha de Ponto</li>
             <li>Conta</li>
         </ul>
     </div>
