Pequena alteração no menu do policial

--- a/templates/menu_policial.html
+++ b/templates/menu_policial.html
@@ -68,7 +68,7 @@
                 </table>
             </div>
             <div class="section">
-                <h3>Equipe Alfa</h3>
+                <h3>Chamado</h3>
                 <table class="table">
                     <tr>
                         <th>Cafundinho</th>
