--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,17 +8,7 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 12px;
-}
-
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  min-height: 100vh;
-
   font-family: var(--font-family-text);
 
   overflow-x: hidden;
@@ -31,13 +21,10 @@ a {
   text-decoration: none;
 }
 
-br {
-  height: 10px;
-}
-
-.wrapper {
+section {
   display: flex;
   justify-content: center;
+  margin-top: 30px;
 }
 
 .brand-name {
@@ -64,9 +51,8 @@ br {
   justify-content: space-between;
 
   width: 100vw;
-  height: 7rem;
 
-  margin-bottom: 3rem;
+  height: 7rem;
 
   color: var(--text-color-light);
   background-color: var(--background-color-logo-blue);
@@ -125,10 +111,12 @@ br {
   justify-content: space-evenly;
 
   width: 100vw;
+
   height: 7rem;
 
-  margin-top: 3rem;
   padding-right: 2.5rem;
+
+  margin-top: 30px;
 
   font-family: var(--font-family-text2);
 
@@ -148,12 +136,85 @@ br {
 
 .footer ul li,
 .footer span {
+  margin: 0.5rem;
+
   color: var(--text-color);
 }
 
-.footer ul li:hover,
-.footer span:hover {
-  text-decoration: underline;
+.main-text {
+  text-align: center;
+
+  width: 55%;
+
+  margin: auto;
+  margin-top: 10px;
+
+  padding: 20px;
+
+  border-radius: 5px;
+
+  background-color: var(--background-color-white);
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  align-items: center;
+  justify-content: center;
+
+  gap: 2rem 1rem;
+
+  width: 50%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 20rem;
+  height: 20rem;
+
+  margin: auto;
+
+  border-radius: 10px;
+  box-shadow: 0 0 10px var(--shadow-color);
+
+  background-color: var(--background-color-white);
+
+  transition: 130ms ease-out;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+}
+
+.card-icon {
+  margin: auto;
+
+  border-radius: 10px 10px 0 0;
+
+  background-color: var(--background-color-white);
+}
+
+.card-icon img {
+  width: 9rem;
+  height: 9rem;
+}
+
+.card-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 20%;
+
+  margin-top: 10px;
+
+  border-radius: 0 0 10px 10px;
 
   color: var(--text-color-light);
+  background-color: var(--background-color-logo-blue);
 }
